manifests/overlays/aks-non-tls/azure-vote-front-ingress.yaml
-apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/hsts-max-age: '315360000'
    ingress.kubernetes.io/hsts-include-subdomains: 'true'
    ingress.kubernetes.io/content-type-nosniff: 'true'
    ingress.kubernetes.io/frame-deny: 'true'
    ingress.kubernetes.io/browser-xss-filter: 'true'
  name: azure-vote-front-ingress
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: azure-vote-front
              servicePort: 80
            path: /
